--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://nicolascirulli.github.io/show_data/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://aulamindhub.github.io/show_data/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mindhub</title>
-    <script type="module" crossorigin src="https://nicolascirulli.github.io/show_data/assets/main-DYQHF9lq.js"></script>
-    <link rel="modulepreload" crossorigin href="https://nicolascirulli.github.io/show_data/assets/style-glcSgW-R.js">
-    <link rel="stylesheet" crossorigin href="https://nicolascirulli.github.io/show_data/assets/style-4Y02kvjg.css">
+    <script type="module" crossorigin src="https://aulamindhub.github.io/show_data/assets/main-DYQHF9lq.js"></script>
+    <link rel="modulepreload" crossorigin href="https://aulamindhub.github.io/show_data/assets/style-glcSgW-R.js">
+    <link rel="stylesheet" crossorigin href="https://aulamindhub.github.io/show_data/assets/style-4Y02kvjg.css">
   </head>
   <body>
     <div id="app"></div>
