--- a/petshop/index.html
+++ b/petshop/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <script type="module" crossorigin src="https://nicolascirulli.github.io/show_data/assets/nested-BYiBi0mY.js"></script>
-  <link rel="modulepreload" crossorigin href="https://nicolascirulli.github.io/show_data/assets/style-glcSgW-R.js">
-  <link rel="stylesheet" crossorigin href="https://nicolascirulli.github.io/show_data/assets/style-4Y02kvjg.css">
+  <script type="module" crossorigin src="https://aulamindhub.github.io/show_data/assets/nested-BYiBi0mY.js"></script>
+  <link rel="modulepreload" crossorigin href="https://aulamindhub.github.io/show_data/assets/style-glcSgW-R.js">
+  <link rel="stylesheet" crossorigin href="https://aulamindhub.github.io/show_data/assets/style-4Y02kvjg.css">
 </head>
 <body>
     <div id="petshop"></div>
